2012-10-11  Eugene Klyuchnikov  <eustas.bug@gmail.com>

        Web Inspector: The 'X' of the close button of Settings view is not centered
        https://bugs.webkit.org/show_bug.cgi?id=99008

        Reviewed by Alexander Pavlov.

        Fixed text positioning in CSS.

        * inspector/front-end/helpScreen.css:
        (.help-close-button):

2012-10-11  Kent Tamura  <tkent@chromium.org>

        Introduce Localizer::isRTL, and use it in DateTimeChooserImpl
        https://bugs.webkit.org/show_bug.cgi?id=98992

        Reviewed by Kentaro Hara.

        - Move the RTL detection code in
          WebKit/chromium/src/DateTimeChooserImpl.cpp to LocaleWin::isRTL()
        - Introduce Localizer::isRTL as a pure virtual function
        - Implement LocaleMac::isRTL with native API
        - Implement LocaleICU::isRTL with ICU API
        - Add dummy implementation: LocaleNone::isRTL

        Add some tests to WebKit/chromium/tests/.

        * platform/text/Localizer.h:
        (Localizer): Declare pure virtual isRTL.

        * platform/text/LocaleICU.h:
        (LocaleICU): Declare isRTL.
        * platform/text/LocaleICU.cpp:
        (WebCore::LocaleICU::isRTL): Implemented with uloc_getCharacterOrientation.

        * platform/text/LocaleNone.cpp:
        (LocaleNone): Declare isRTL.
        (WebCore::LocaleNone::isRTL): Added.

        * platform/text/LocaleWin.h:
        (LocaleWin): Declare isRTL.
        * platform/text/LocaleWin.cpp:
        (WebCore::LocaleWin::isRTL): Implemented.

        * platform/text/mac/LocaleMac.h:
        (LocaleMac): Declare isRTL.
        * platform/text/mac/LocaleMac.mm:
        (WebCore::LocaleMac::isRTL): Implemented.

2012-10-11  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: TypeError in ConsoleMessage.js
        https://bugs.webkit.org/show_bug.cgi?id=98999

        Reviewed by Alexander Pavlov.

        This patch is based on patch by John J. Barton.
        Added a check that stack length is equal.
