@@ -1,5 +1,13 @@
 2012-10-11  Kent Tamura  <tkent@chromium.org>
 
+        Introduce Localizer::isRTL, and use it in DateTimeChooserImpl
+        https://bugs.webkit.org/show_bug.cgi?id=98992
+
+        * tests/LocalizedDateICUTest.cpp:
+        (TEST_F): Re-enabled isRTL test.
+
+2012-10-11  Kent Tamura  <tkent@chromium.org>
+
         [Chromium] Disable LocalizedDateICUTest.isRTL
         https://bugs.webkit.org/show_bug.cgi?id=98992
 
